# ChangeLog for net-libs/webkit-gtk
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.122 2011/09/30 13:52:33 nirbheek Exp $

*webkit-gtk-1.6.1-r300 (30 Sep 2011)
*webkit-gtk-1.6.1-r200 (30 Sep 2011)

  30 Sep 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  +webkit-gtk-1.6.1-r200.ebuild, +webkit-gtk-1.6.1-r300.ebuild, metadata.xml:
  Bump to 1.6.1, optional partly-broken webgl support, build and install API
  docs with USE=doc, generate an xz tarball and use that

  24 Sep 2011; Pacho Ramos <pacho@gentoo.org> webkit-gtk-1.4.3-r300.ebuild,
  -files/webkit-gtk-1.4.3-underlinking.patch:
  underlinking patch is not needed as it was already applied by upstream, bug
  #384181 by Lance Poore, Hilco, Albert W. Hopkins, S.Holzbach and maby others.

*webkit-gtk-1.4.3-r300 (22 Sep 2011)
*webkit-gtk-1.4.3-r200 (22 Sep 2011)

  22 Sep 2011; Pacho Ramos <pacho@gentoo.org> +webkit-gtk-1.4.3-r200.ebuild,
  +webkit-gtk-1.4.3-r300.ebuild, +files/webkit-gtk-1.4.3-underlinking.patch:
  Version bump and fix underlinking problems in gtk3 version (bug #371751).

  31 Aug 2011; Pacho Ramos <pacho@gentoo.org> webkit-gtk-1.2.7.ebuild:
  Parallel build fails for 1.2.x, seems fixed in 1.4.x (bug #343249).

  14 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  -webkit-gtk-1.4.1-r200.ebuild, -webkit-gtk-1.4.1-r300.ebuild,
  webkit-gtk-1.4.2-r200.ebuild, webkit-gtk-1.4.2-r300.ebuild:
  DEPEND on virtual/yacc instead of bison, remove old

  14 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  webkit-gtk-1.4.2-r200.ebuild, webkit-gtk-1.4.2-r300.ebuild:
  Require USE=gstreamer for USE=introspection, bug 372493

  27 Jul 2011; Pacho Ramos <pacho@gentoo.org> webkit-gtk-1.4.2-r200.ebuild,
  webkit-gtk-1.4.2-r300.ebuild:
  Add sys-devel/bison DEPEND, bug #376291 by Albert W. Hopkins.

*webkit-gtk-1.4.2-r300 (24 Jul 2011)
*webkit-gtk-1.4.2-r200 (24 Jul 2011)

  24 Jul 2011; Gilles Dartiguelongue <eva@gentoo.org>